
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef int si ;
typedef int pi ;
struct TYPE_6__ {int cb; int hProcess; int hThread; } ;
typedef TYPE_1__ STARTUPINFO ;
typedef int PWCHAR ;
typedef TYPE_1__ PROCESS_INFORMATION ;
typedef int BOOL ;


 int CREATE_NEW_CONSOLE ;
 int CloseHandle (int ) ;
 int CreateProcess (int ,int ,int *,int *,int ,int ,int *,int *,TYPE_1__*,TYPE_1__*) ;
 int FALSE ;
 int TRUE ;
 int ZeroMemory (TYPE_1__*,int) ;

BOOL CreateChild(PWCHAR Child) {

    PROCESS_INFORMATION pi;
   STARTUPINFO si;

    ZeroMemory( &si, sizeof(si) );
    si.cb = sizeof(si);
    ZeroMemory( &pi, sizeof(pi) );

    if (!CreateProcess(Child, Child, ((void*)0), ((void*)0), 0, CREATE_NEW_CONSOLE, ((void*)0), ((void*)0), &si, &pi))
        return FALSE;

    CloseHandle(pi.hThread);
    CloseHandle(pi.hProcess);
    return TRUE;
}
